# 0.00.21 (44648) Oct 4, 2010
10/4/10 demo new field density algorithm
10/4/10 smaller arrows on field lines
10/4/10 compute field density based on minimum plate area, not based on plate side length
10/4/10 simplify PlateChargeNode.getNumberOfCharges
10/4/10 remove Multiple Capacitors tab, will be included in a future (post 1.0?) version
10/4/10 check in new (larger) e-field probe image created by Noah P
10/1/10 get rid of "non-zero minimum" for E-field lines, it's not doing anything but complicating computations
# 0.00.20 (44619) Oct 1, 2010
10/1/10 fix: density (not number) of field lines is proportional to E_effective
10/1/10 make physical parts of the capacitor transparent when E-field, Voltmeter or Field Detector is selected
10/1/10 add placeholder node for E-Field Detector, wire up visibility to control panel
10/1/10 check in field detector probe image created by Noah P
10/1/10 change "Field Detector" to "Electric Field Detector"
# 0.00.19 (44601) Oct 1, 2010
10/1/10 demonstrate E-field lines
10/1/10 make capacitor plates and dielectric transparent when E-field is selected
10/1/10 add E-field view
10/1/10 move responsibility for dielectric color into DielectricNode
# 0.00.18 (44586) Sep 30, 2010
9/30/10 demo fix to current indicator, and improved plate charge layout
9/30/10 add margin along z axis for plate charges, hack to keep them on the plate with 3D perspective
9/30/10 keep plate charges from falling off the edges of the plate
9/30/10 ensure that at least one charge is shown if number of plate charges is non-zero
9/30/10 TestPlateChargeLayout, test harness for plate charge layout
9/30/10 fix: current indicator should point counterclockwise for +dV, clockwise for -dV
9/30/10 tweak tick marks on Plate Charge slider, make thumb line up precisely with zero
9/29/10 remove debug value node from PlateChargeControlNode, this info is shown in ModelValuesPanel